k8s/overlays/production/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: www-mfeed-ad-jp-wordpress
spec:
  replicas: 3
  template:
    spec:
      containers:
        - name: www-mfeed-ad-jp-wordpress
        - name: cloud-sql-proxy
          args:
            - "--port=3306"
            - "--structured-logs"
            - "mfeed-web-production:asia-northeast1:mfeed-web-wordpress"
