k8s/overlays/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-svc
  namespace: web-production
  labels:
    app: www-mfeed-ad-jp-wordpress
spec:
  type: ClusterIP
  selector:
    app: www-mfeed-ad-jp-wordpress
    app.kubernetes.io/environment: production
    app.kubernetes.io/name: wordpress
    app.kubernetes.io/part-of: mfeed-web
  ports:
    - name: http
      port: 80
      targetPort: http
