k8s/overlays/production/ingress-www-mfeed-ad-jp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: www-mfeed-ad-jp
  namespace: web-production
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Cache-Control: public, max-age=300";
  labels:
    app.kubernetes.io/environment: production
    app.kubernetes.io/name: wordpress
    app.kubernetes.io/part-of: mfeed-web
spec:
  ingressClassName: nginx
  rules:
    - host: www.mfeed.ad.jp
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress-svc
                port:
                  number: 80
