k8s/overlays/production/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mfeed-wordpress-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: web-v4-2
spec:
  rules:
    - host: www.mfeed.ad.jp
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mfeed-wordpress-svc
                port:
                  number: 80
